[package]
name = "rss-miner"
version = "0.1.0"
edition = "2021"

[lib]
name = "rss_miner"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.20"
opml = "1.1"
url = "2.5"
rss = "2.0"
atom_syndication = "0.12"
anyhow = "1.0"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.15"
