[package]
name = "rss-miner"
version = "0.1.1"
edition = "2021"
description = "CLI tool that finds RSS/Atom feeds from URLs and generates OPML."
repository = "https://github.com/RustedBytes/rss-miner"
homepage = "https://github.com/RustedBytes/rss-miner"
license = "MIT"

[lib]
name = "rss_miner"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
clap = { version = "4.5", features = ["derive"] }

rayon = "1.10"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

scraper = "0.20"
opml = "1.1"
url = "2.5"
rss = "2.0"
atom_syndication = "0.12"
anyhow = "1.0"
quick-xml = "0.39"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.15"
