[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rss-miner"
version = "0.1.0"
description = "A fast RSS/Atom feed discovery and OPML generation tool with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
keywords = ["rss", "atom", "feed", "opml", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/RustedBytes/rss-miner"
Repository = "https://github.com/RustedBytes/rss-miner"
Issues = "https://github.com/RustedBytes/rss-miner/issues"

[tool.maturin]
features = ["python"]
module-name = "rss_miner.rss_miner"
python-source = "rss_miner"
